# checkmate

./: .gitignore  bower.json  checkmate.cabal  index.html  main.js  package.json  stack.yaml
client/app/: Main.purs  Utils.purs
output/CSS/: externs.json  index.js
output/CSS.Animation/: externs.json  index.js
output/CSS.Background/: externs.json  index.js
output/CSS.Border/: externs.json  index.js
output/CSS.Box/: externs.json  index.js
output/CSS.Color/: externs.json  index.js
output/CSS.Common/: externs.json  index.js
output/CSS.Display/: externs.json  index.js
output/CSS.Elements/: externs.json  index.js
output/CSS.Flexbox/: externs.json  index.js
output/CSS.Font/: externs.json  index.js
output/CSS.FontFace/: externs.json  index.js
output/CSS.Geometry/: externs.json  index.js
output/CSS.Gradient/: externs.json  index.js
output/CSS.Media/: externs.json  index.js
output/CSS.Overflow/: externs.json  index.js
output/CSS.Property/: externs.json  index.js
output/CSS.Pseudo/: externs.json  index.js
output/CSS.Render/: externs.json  index.js
output/CSS.Selector/: externs.json  index.js
output/CSS.Size/: externs.json  index.js
output/CSS.String/: index.js
output/CSS.Stylesheet/: externs.json  index.js
output/CSS.Text/: externs.json  index.js
output/CSS.Text.Whitespace/: externs.json  index.js
output/CSS.TextAlign/: externs.json  index.js
output/CSS.Time/: externs.json  index.js
output/CSS.Transform/: externs.json  index.js
output/CSS.Transition/: externs.json  index.js
output/Color.Blending/: externs.json  (+1 more)
src/: Effects.purs  HTTP.purs  Main.purs  Model.purs  Stylesheet.purs  UI.purs  Utils.purs
(+1255 files in other folders)
