name:                checkmate
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/checkmate#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      server/src
  exposed-modules:     Checkmate
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lens
                     , mtl
                     , servant-server
                     , text
                     , wai
                     , wai-extra
                     , warp
                     , wreq
  default-language:    Haskell2010

executable checkmate-server
  hs-source-dirs:      server/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , checkmate
  default-language:    Haskell2010

test-suite checkmate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  build-depends:       base
                     , checkmate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/checkmate
